--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 
     <footer class="footer">
-        <p>© 2024 Aryan Sharma. All rights reserved.</p>
+        <p>© 2024 Rajat Vatwani. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
