--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rajat Vatwani - Hardware Engineer </title>
+    <title>Rajat Vatwani - ML Researcher and Software Developer </title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -44,7 +44,7 @@
                 <img src="Rajat.jpeg" alt="Rajat Vatwani">
             </div>
             <div class="about-text">
-                <h3>ML Researcher and Software Developer</h3>
+                <h3>Hardware Engineer</h3>
                 <p>
                     I am a fourth-year BTech student specializing in Electronics and Communication Engineering. I have a strong passion for learning data structures, algorithms, and software development, and I have excelled in problem-solving skills. I am confident in my ability to develop robust applications. Additionally, I engage in competitive programming and machine learning. When I'm not coding, you can find me playing cricket or chess.
                 </p>
