--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="Rajat.jpeg" alt="Rajat Vatwani">
             </div>
             <div class="about-text">
-                <h3>Hardware Engineer</h3>
+                <h3>ML Researcher and Software Developer</h3>
                 <p>
                     I am a fourth-year BTech student specializing in Electronics and Communication Engineering. I have a strong passion for learning data structures, algorithms, and software development, and I have excelled in problem-solving skills. I am confident in my ability to develop robust applications. Additionally, I engage in competitive programming and machine learning. When I'm not coding, you can find me playing cricket or chess.
                 </p>
