--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2 class="heading">About <span>Me</span></h2>
         <div class="about-content">
             <div class="about-img">
-                <img src="Rajat.jpeg" alt="Rajat Vatwani">
+                <img src="Rajat_Vatwani_Photo.jpg" alt="Rajat Vatwani">
             </div>
             <div class="about-text">
                 <h3>ML Researcher and Software Developer</h3>
