--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="https://drive.google.com/drive/folders/1A_eM-a7PmlcLJKjmBNTW19l8Mz6zr-mj?usp=sharing" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="Rajat.jpeg" alt="Rajat Vatwani">
+            <img src="Rajat_Vatwani_Photo.jpg" alt="Rajat Vatwani">
         </div>
     </section>
 
