--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
                 </div>
             </div>
             <div class="project-box">
-                <img src="project2.jpg" alt="Computer Architecture Project">
+                <img src="project4.jpeg" alt="Object Oriented Programming  Project">
                 <div class="project-layer">
                     <h4>RISC-V Processor</h4>
                     <p>
-                        Developed a cycle-accurate simulator for a 5-Stage RISC CPU, including an assembler for RISC-V ISA, a 2-way set associative cache with LRU replacement policy, and comprehensive logging and analysis of CPU States and memory access patterns.
+                        <!--Developed a cycle-accurate simulator for a 5-Stage RISC CPU, including an assembler for RISC-V ISA, a 2-way set associative cache with LRU replacement policy, and comprehensive logging and analysis of CPU States and memory access patterns. -->
+                        Developed a 1 vs. 1 Tank Stars game using LibGDX, implementing key features like tank selection, turn-based firing, and game state saving/loading. Applied OOP principles, design patterns, and ensured comprehensive testing.
                         </p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
