--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <img src="project4.jpeg" alt="Object Oriented Programming  Project">
+                <img src="project4.jpg" alt="Object Oriented Programming  Project">
                 <div class="project-layer">
                     <h4>RISC-V Processor</h4>
                     <p>
