--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="project-box">
                 <img src="project4.jpg" alt="Object Oriented Programming  Project">
                 <div class="project-layer">
-                    <h4>RISC-V Processor</h4>
+                    <h4>Tankstars Game</h4>
                     <p>
                         <!--Developed a cycle-accurate simulator for a 5-Stage RISC CPU, including an assembler for RISC-V ISA, a 2-way set associative cache with LRU replacement policy, and comprehensive logging and analysis of CPU States and memory access patterns. -->
                         Developed a 1 vs. 1 Tank Stars game using LibGDX, implementing key features like tank selection, turn-based firing, and game state saving/loading. Applied OOP principles, design patterns, and ensured comprehensive testing.
